--- a/lesson_five.ipynb
+++ b/lesson_five.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Lesson Five"
    ]
@@ -10,7 +13,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "In this episode, we're going to do something special, and that's write our own classifier from scratch. If you're new to machine learning, this is a big milestone. Because if you can follow along and do this on your own, it means you understand an important piece of the puzzle. The classifier we're going to write today is a scrappy version of k-Nearest Neighbors. That's one of the simplest classifiers around. First, here's a quick outline of what we'll do in this episode. We'll start with our code from Episode 4, Let’s Write a Pipeline:"
@@ -20,7 +25,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -63,7 +70,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Writing the classifier is the part we're going to focus on today. Previously we imported the classifier from a library using these two lines. Here we'll comment them out and write our own. The rest of the pipeline will stay exactly the same."
    ]
@@ -72,7 +82,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -142,21 +154,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Recall there are three different types of flowers in the iris dataset, so accuracy should be about 33%. Now we know the interface for a classifier. But when we started this exercise, our accuracy was above 90%. So let's see if we can do better. To do that, we'll implement our classifier, which is based on k-Nearest Neighbors. Here's the intuition for how that algorithm works."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now we know the interface for a classifier. But when we started this exercise, our accuracy was above 90%. So let's see if we can do better. To do that, we'll implement our classifier, which is based on k-Nearest Neighbors."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "There's a formula for that called the Euclidean Distance, and here's what the formula looks like. It measures the distance between two points, and it works a bit like the Pythagorean Theorem. A squared plus B squared equals C squared. You can think of this term as A, or the difference between the first two features. Likewise, you can think of this term as B, or the difference between the second pair of features. And the distance we compute is the length of the hypotenuse. Now here's something cool. Right now we're computing distance in two-dimensional space, because we have just two features in our toy dataset. But what if we had three features or three dimensions? Well then we'd be in a cube. We can still visualize how to measure distance in the space with a ruler. But what if we had four features or four dimensions, like we do in iris? Well, now we're in a hypercube, and we can't visualize this very easy. The good news is the Euclidean Distance works the same way regardless of the number of dimensions. With more features, we can just add more terms to the equation. You can find more details about this online. Now let's code up Euclidean distance."
    ]
@@ -165,7 +186,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -262,14 +285,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "We did get accuracy over 90%.... awesome."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now if you can code this up and understand it, that's a big accomplishment because it means you can write a simple classifier from scratch. Now, there are a number of pros and cons to this algorithm, many of which you can find online. The basic pro is that it's relatively easy to understand, and works reasonably well for some problems. And the basic cons are that it's slow, because it has to iterate over every training point to make a prediction. And importantly, as we saw in Episode 3, some features are more informative than others. But there's not an easy way to represent that in k-Nearest Neighbors. In the long run, we want a classifier that learns more complex relationships between features and the label we're trying to predict. A decision tree is a good example of that. And a neural network like we saw in TensorFlow Playground is even better."
    ]
@@ -278,7 +307,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -300,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
