--- a/lesson_seven.ipynb
+++ b/lesson_seven.ipynb
@@ -325,7 +325,7 @@
    "source": [
     "## Placeholder Nodes\n",
     "\n",
-    "Placeholder nodes is just to output the data at runtime, it dosen't perform any computation, and it is used to pas the training data to TensorFlow during trainin."
+    "Placeholder nodes is just to output the data at runtime, it dosen't perform any computation, and it is used to pass the training data to TensorFlow during trainin."
    ]
   },
   {
@@ -610,7 +610,7 @@
    },
    "source": [
     "# Saving and restoring a model\n",
-    "TensorFlow mkaes saving and restoring a model very simple and easy. We only need to create a Server node after all variables nodes are created, then, during execution phase just invoke the save() method, passing it the session and the path of the file:"
+    "TensorFlow makes saving and restoring a model very easy. We only need to create a Server node after all variables nodes are created, then, during running phase just invoke the save() method, passing it the session and the path of the file:"
    ]
   },
   {
@@ -750,7 +750,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -765,7 +767,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -795,7 +799,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
