--- a/lesson_eight.ipynb
+++ b/lesson_eight.ipynb
@@ -246,7 +246,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Back to basic again"
    ]
@@ -255,7 +258,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -276,7 +281,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -294,7 +301,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -318,7 +327,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -347,7 +358,9 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -374,7 +387,9 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -392,7 +407,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Consequently, TensorFlow can automatically produce derivatives given only a description of the model using the function tf.gradients. For simplicity, optimizers typically do this for you."
    ]
@@ -401,7 +419,9 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -416,7 +436,9 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -429,7 +451,9 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -448,7 +472,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### From the documentations: \n",
     "\n",
@@ -464,7 +491,9 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -475,7 +504,9 @@
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -575,6 +606,148 @@
     "eval_loss = estimator.evaluate(input_fn=eval_input_fn)\n",
     "print(\"train loss: %r\"% train_loss)\n",
     "print(\"eval loss: %r\"% eval_loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# Try and try again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "lesson_six.reset_graph()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp5wygkl0m\n",
+      "INFO:tensorflow:Using default config.\n",
+      "INFO:tensorflow:Using config: {'_task_type': None, '_task_id': 0, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x11b0d5908>, '_master': '', '_num_ps_replicas': 0, '_environment': 'local', '_is_chief': True, '_evaluation_master': '', '_tf_config': gpu_options {\n",
+      "  per_process_gpu_memory_fraction: 1\n",
+      "}\n",
+      ", '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_secs': 600, '_save_checkpoints_steps': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000}\n",
+      "INFO:tensorflow:Create CheckpointSaverHook.\n",
+      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp5wygkl0m/model.ckpt.\n",
+      "INFO:tensorflow:loss = 0.293729208163, step = 1\n",
+      "INFO:tensorflow:global_step/sec: 973.226\n",
+      "INFO:tensorflow:loss = 0.000325650973722, step = 101\n",
+      "INFO:tensorflow:global_step/sec: 826.317\n",
+      "INFO:tensorflow:loss = 0.000105306798944, step = 201\n",
+      "INFO:tensorflow:global_step/sec: 802.547\n",
+      "INFO:tensorflow:loss = 6.28692836449e-06, step = 301\n",
+      "INFO:tensorflow:global_step/sec: 740.341\n",
+      "INFO:tensorflow:loss = 1.01036158116e-06, step = 401\n",
+      "INFO:tensorflow:global_step/sec: 850.544\n",
+      "INFO:tensorflow:loss = 7.37820735637e-08, step = 501\n",
+      "INFO:tensorflow:global_step/sec: 1013.79\n",
+      "INFO:tensorflow:loss = 1.13750947158e-09, step = 601\n",
+      "INFO:tensorflow:global_step/sec: 1009.61\n",
+      "INFO:tensorflow:loss = 1.12543573876e-10, step = 701\n",
+      "INFO:tensorflow:global_step/sec: 1122.73\n",
+      "INFO:tensorflow:loss = 6.11227584871e-11, step = 801\n",
+      "INFO:tensorflow:global_step/sec: 1304.92\n",
+      "INFO:tensorflow:loss = 2.36415624705e-12, step = 901\n",
+      "INFO:tensorflow:Saving checkpoints for 1000 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp5wygkl0m/model.ckpt.\n",
+      "INFO:tensorflow:Loss for final step: 2.62836045101e-13.\n",
+      "INFO:tensorflow:Starting evaluation at 2017-07-03-00:10:03\n",
+      "INFO:tensorflow:Finished evaluation at 2017-07-03-00:10:04\n",
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 2.95303e-13\n",
+      "WARNING:tensorflow:Skipping summary for global_step, must be a float or np.float32.\n",
+      "INFO:tensorflow:Starting evaluation at 2017-07-03-00:10:04\n",
+      "INFO:tensorflow:Finished evaluation at 2017-07-03-00:10:05\n",
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 0.01009\n",
+      "WARNING:tensorflow:Skipping summary for global_step, must be a float or np.float32.\n",
+      "train loss: {'loss': 2.9530328e-13, 'global_step': 1000}\n",
+      "eval loss: {'loss': 0.010090049, 'global_step': 1000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Declare list of features, we only have one real-values feature\n",
+    "def model(features, labels, mode):\n",
+    "    \n",
+    "    # Learning rate\n",
+    "    learning_rate=0.01\n",
+    "    \n",
+    "    # Build a linear model and predict values\n",
+    "    W = tf.get_variable(\"W\", [1], dtype=tf.float64)\n",
+    "    b = tf.get_variable(\"b\", [1], dtype=tf.float64)\n",
+    "    prediction = W * features['x'] + b\n",
+    "    \n",
+    "    # Loss sub-graph\n",
+    "    loss = tf.reduce_sum(tf.square(prediction - labels))\n",
+    "    \n",
+    "    # Training sub-graph\n",
+    "    global_step = tf.train.get_global_step()\n",
+    "    optimizer = tf.train.GradientDescentOptimizer(learning_rate)\n",
+    "    train = tf.group(optimizer.minimize(loss), tf.assign_add(global_step, 1))\n",
+    "    \n",
+    "    # ModelFnOps concepts subgraph we built to the appropriate functuality\n",
+    "    return tf.contrib.learn.ModelFnOps(mode=mode, predictions=prediction, loss=loss, train_op=train)\n",
+    "\n",
+    "# Instead of sub-classing Estimator, we simply provide Estimator a function model_fn \n",
+    "# that tells tf.contrib.learn how it can evaluate predictions, training steps, and loss.\n",
+    "# Pass our model function as argument\n",
+    "estimator = tf.contrib.learn.Estimator(model_fn=model)\n",
+    "\n",
+    "# Training data sets\n",
+    "x_train = np.array([1., 2., 3., 4.])\n",
+    "y_train = np.array([0., -1., -2., -3.])\n",
+    "\n",
+    "# Testing/evaluation data sets\n",
+    "x_eval = np.array([2., 5., 8., 1.])\n",
+    "y_eval = np.array([-1.01, -4.1, -7, 0.])\n",
+    "\n",
+    "# Wraping up the training x and y, this module is a tools to allow different io formats, \n",
+    "# in this case numpy array, also the mini-batch size and the num of epochs\n",
+    "input_fn = tf.contrib.learn.io.numpy_input_fn({\"x\": x_train}, y_train, batch_size=4, num_epochs=1000) # training\n",
+    "\n",
+    "eval_input_fn = tf.contrib.learn.io.numpy_input_fn({\"x\":x_eval}, y_eval, batch_size=4, num_epochs=1000) # evaluation\n",
+    "\n",
+    "\n",
+    "# Training, invoking fit() on estimator instance, pass the input_fn as first argument, a\n",
+    "estimator.fit(input_fn=input_fn, steps=1000)\n",
+    "\n",
+    "# Let's evaluate how well out model did\n",
+    "train_loss = estimator.evaluate(input_fn=input_fn)\n",
+    "eval_loss = estimator.evaluate(input_fn=eval_input_fn)\n",
+    "\n",
+    "# Print the result \n",
+    "print(\"train loss: %r\"% train_loss)\n",
+    "print(\"eval loss: %r\"% eval_loss)\n"
    ]
   },
   {
