--- a/lesson_eight.ipynb
+++ b/lesson_eight.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -154,6 +154,7 @@
     "#optimizer = tf.train.GradientDescentOptimizer(learning_rate=learning_rate)\n",
     "optimizer = tf.train.MomentumOptimizer(learning_rate=learning_rate, momentum=0.5)\n",
     "training_op = optimizer.minimize(mse)\n",
+    "\n",
     "\n",
     "# Globa variable initializer\n",
     "global_init = tf.global_variables_initializer()\n",
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -223,7 +224,7 @@
        "       [-0.83012849]], dtype=float32)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -356,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -369,7 +370,7 @@
        "[array([-1.], dtype=float32), array([ 1.], dtype=float32)]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -449,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -513,9 +514,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmpemi38j0o\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp30esndu8\n",
       "INFO:tensorflow:Using default config.\n",
-      "INFO:tensorflow:Using config: {'_task_type': None, '_task_id': 0, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x11a4c30b8>, '_master': '', '_num_ps_replicas': 0, '_environment': 'local', '_is_chief': True, '_evaluation_master': '', '_tf_config': gpu_options {\n",
+      "INFO:tensorflow:Using config: {'_task_type': None, '_task_id': 0, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x11e5600b8>, '_master': '', '_num_ps_replicas': 0, '_environment': 'local', '_is_chief': True, '_evaluation_master': '', '_tf_config': gpu_options {\n",
       "  per_process_gpu_memory_fraction: 1\n",
       "}\n",
       ", '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_secs': 600, '_save_checkpoints_steps': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000}\n",
@@ -524,46 +525,46 @@
       "Instructions for updating:\n",
       "Please switch to tf.summary.scalar. Note that tf.summary.scalar uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, passing a tensor or list of tags to a scalar summary op is no longer supported.\n",
       "INFO:tensorflow:Create CheckpointSaverHook.\n",
-      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmpemi38j0o/model.ckpt.\n",
-      "INFO:tensorflow:loss = 3.5, step = 1\n",
-      "INFO:tensorflow:global_step/sec: 863.813\n",
-      "INFO:tensorflow:loss = 0.0433291, step = 101\n",
-      "INFO:tensorflow:global_step/sec: 282.968\n",
-      "INFO:tensorflow:loss = 0.0250619, step = 201\n",
-      "INFO:tensorflow:global_step/sec: 966.211\n",
-      "INFO:tensorflow:loss = 0.00444322, step = 301\n",
-      "INFO:tensorflow:global_step/sec: 1098.03\n",
-      "INFO:tensorflow:loss = 0.000717889, step = 401\n",
-      "INFO:tensorflow:global_step/sec: 412.584\n",
-      "INFO:tensorflow:loss = 7.35314e-05, step = 501\n",
-      "INFO:tensorflow:global_step/sec: 939.399\n",
-      "INFO:tensorflow:loss = 6.49574e-06, step = 601\n",
-      "INFO:tensorflow:global_step/sec: 887.053\n",
-      "INFO:tensorflow:loss = 4.00174e-06, step = 701\n",
-      "INFO:tensorflow:global_step/sec: 1021.2\n",
-      "INFO:tensorflow:loss = 3.97147e-07, step = 801\n",
-      "INFO:tensorflow:global_step/sec: 1246.99\n",
-      "INFO:tensorflow:loss = 4.45591e-07, step = 901\n",
-      "INFO:tensorflow:Saving checkpoints for 1000 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmpemi38j0o/model.ckpt.\n",
-      "INFO:tensorflow:Loss for final step: 6.91743e-08.\n",
+      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp30esndu8/model.ckpt.\n",
+      "INFO:tensorflow:loss = 4.75, step = 1\n",
+      "INFO:tensorflow:global_step/sec: 994.243\n",
+      "INFO:tensorflow:loss = 0.0856067, step = 101\n",
+      "INFO:tensorflow:global_step/sec: 1031.09\n",
+      "INFO:tensorflow:loss = 0.0149809, step = 201\n",
+      "INFO:tensorflow:global_step/sec: 901.933\n",
+      "INFO:tensorflow:loss = 0.00703437, step = 301\n",
+      "INFO:tensorflow:global_step/sec: 927.506\n",
+      "INFO:tensorflow:loss = 0.000263851, step = 401\n",
+      "INFO:tensorflow:global_step/sec: 985.525\n",
+      "INFO:tensorflow:loss = 0.000480802, step = 501\n",
+      "INFO:tensorflow:global_step/sec: 992.721\n",
+      "INFO:tensorflow:loss = 0.000191461, step = 601\n",
+      "INFO:tensorflow:global_step/sec: 1016.93\n",
+      "INFO:tensorflow:loss = 4.736e-05, step = 701\n",
+      "INFO:tensorflow:global_step/sec: 1147.94\n",
+      "INFO:tensorflow:loss = 9.7207e-06, step = 801\n",
+      "INFO:tensorflow:global_step/sec: 1323.09\n",
+      "INFO:tensorflow:loss = 2.74034e-06, step = 901\n",
+      "INFO:tensorflow:Saving checkpoints for 1000 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp30esndu8/model.ckpt.\n",
+      "INFO:tensorflow:Loss for final step: 6.51463e-07.\n",
       "WARNING:tensorflow:Rank of input Tensor (1) should be the same as output_rank (2) for column. Will attempt to expand dims. It is highly recommended that you resize your input, as this behavior may change.\n",
       "WARNING:tensorflow:From /Users/hishmadabubakaralamudi/anaconda3/envs/dlnd/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/estimators/head.py:1362: scalar_summary (from tensorflow.python.ops.logging_ops) is deprecated and will be removed after 2016-11-30.\n",
       "Instructions for updating:\n",
       "Please switch to tf.summary.scalar. Note that tf.summary.scalar uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, passing a tensor or list of tags to a scalar summary op is no longer supported.\n",
-      "INFO:tensorflow:Starting evaluation at 2017-07-02-14:22:25\n",
-      "INFO:tensorflow:Finished evaluation at 2017-07-02-14:22:26\n",
-      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 5.24289e-08\n",
+      "INFO:tensorflow:Starting evaluation at 2017-07-03-10:15:33\n",
+      "INFO:tensorflow:Finished evaluation at 2017-07-03-10:15:34\n",
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 1.02473e-06\n",
       "WARNING:tensorflow:Skipping summary for global_step, must be a float or np.float32.\n",
       "WARNING:tensorflow:Rank of input Tensor (1) should be the same as output_rank (2) for column. Will attempt to expand dims. It is highly recommended that you resize your input, as this behavior may change.\n",
       "WARNING:tensorflow:From /Users/hishmadabubakaralamudi/anaconda3/envs/dlnd/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/estimators/head.py:1362: scalar_summary (from tensorflow.python.ops.logging_ops) is deprecated and will be removed after 2016-11-30.\n",
       "Instructions for updating:\n",
       "Please switch to tf.summary.scalar. Note that tf.summary.scalar uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, passing a tensor or list of tags to a scalar summary op is no longer supported.\n",
-      "INFO:tensorflow:Starting evaluation at 2017-07-02-14:22:26\n",
-      "INFO:tensorflow:Finished evaluation at 2017-07-02-14:22:27\n",
-      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 0.00254591\n",
+      "INFO:tensorflow:Starting evaluation at 2017-07-03-10:15:34\n",
+      "INFO:tensorflow:Finished evaluation at 2017-07-03-10:15:35\n",
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 0.0026126\n",
       "WARNING:tensorflow:Skipping summary for global_step, must be a float or np.float32.\n",
-      "train loss: {'loss': 5.2428909e-08, 'global_step': 1000}\n",
-      "eval loss: {'loss': 0.0025459128, 'global_step': 1000}\n"
+      "train loss: {'loss': 1.0247342e-06, 'global_step': 1000}\n",
+      "eval loss: {'loss': 0.002612605, 'global_step': 1000}\n"
      ]
     }
    ],
@@ -621,9 +622,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -632,9 +635,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -644,54 +649,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp5wygkl0m\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp9fj62rq0\n",
       "INFO:tensorflow:Using default config.\n",
-      "INFO:tensorflow:Using config: {'_task_type': None, '_task_id': 0, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x11b0d5908>, '_master': '', '_num_ps_replicas': 0, '_environment': 'local', '_is_chief': True, '_evaluation_master': '', '_tf_config': gpu_options {\n",
+      "INFO:tensorflow:Using config: {'_task_type': None, '_task_id': 0, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x11eaf6ef0>, '_master': '', '_num_ps_replicas': 0, '_environment': 'local', '_is_chief': True, '_evaluation_master': '', '_tf_config': gpu_options {\n",
       "  per_process_gpu_memory_fraction: 1\n",
       "}\n",
       ", '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_secs': 600, '_save_checkpoints_steps': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000}\n",
       "INFO:tensorflow:Create CheckpointSaverHook.\n",
-      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp5wygkl0m/model.ckpt.\n",
-      "INFO:tensorflow:loss = 0.293729208163, step = 1\n",
-      "INFO:tensorflow:global_step/sec: 973.226\n",
-      "INFO:tensorflow:loss = 0.000325650973722, step = 101\n",
-      "INFO:tensorflow:global_step/sec: 826.317\n",
-      "INFO:tensorflow:loss = 0.000105306798944, step = 201\n",
-      "INFO:tensorflow:global_step/sec: 802.547\n",
-      "INFO:tensorflow:loss = 6.28692836449e-06, step = 301\n",
-      "INFO:tensorflow:global_step/sec: 740.341\n",
-      "INFO:tensorflow:loss = 1.01036158116e-06, step = 401\n",
-      "INFO:tensorflow:global_step/sec: 850.544\n",
-      "INFO:tensorflow:loss = 7.37820735637e-08, step = 501\n",
-      "INFO:tensorflow:global_step/sec: 1013.79\n",
-      "INFO:tensorflow:loss = 1.13750947158e-09, step = 601\n",
-      "INFO:tensorflow:global_step/sec: 1009.61\n",
-      "INFO:tensorflow:loss = 1.12543573876e-10, step = 701\n",
-      "INFO:tensorflow:global_step/sec: 1122.73\n",
-      "INFO:tensorflow:loss = 6.11227584871e-11, step = 801\n",
-      "INFO:tensorflow:global_step/sec: 1304.92\n",
-      "INFO:tensorflow:loss = 2.36415624705e-12, step = 901\n",
-      "INFO:tensorflow:Saving checkpoints for 1000 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp5wygkl0m/model.ckpt.\n",
-      "INFO:tensorflow:Loss for final step: 2.62836045101e-13.\n",
-      "INFO:tensorflow:Starting evaluation at 2017-07-03-00:10:03\n",
-      "INFO:tensorflow:Finished evaluation at 2017-07-03-00:10:04\n",
-      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 2.95303e-13\n",
+      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp9fj62rq0/model.ckpt.\n",
+      "INFO:tensorflow:loss = 4.96768802885, step = 1\n",
+      "INFO:tensorflow:global_step/sec: 1208.77\n",
+      "INFO:tensorflow:loss = 0.521674350083, step = 101\n",
+      "INFO:tensorflow:global_step/sec: 1128.85\n",
+      "INFO:tensorflow:loss = 0.00365742811902, step = 201\n",
+      "INFO:tensorflow:global_step/sec: 447.433\n",
+      "INFO:tensorflow:loss = 0.00284671054575, step = 301\n",
+      "INFO:tensorflow:global_step/sec: 873.897\n",
+      "INFO:tensorflow:loss = 8.27930022415e-05, step = 401\n",
+      "INFO:tensorflow:global_step/sec: 923.463\n",
+      "INFO:tensorflow:loss = 2.59063832517e-05, step = 501\n",
+      "INFO:tensorflow:global_step/sec: 1019.22\n",
+      "INFO:tensorflow:loss = 6.1612805529e-07, step = 601\n",
+      "INFO:tensorflow:global_step/sec: 392.642\n",
+      "INFO:tensorflow:loss = 9.67499902835e-08, step = 701\n",
+      "INFO:tensorflow:global_step/sec: 1103.44\n",
+      "INFO:tensorflow:loss = 1.63358085485e-08, step = 801\n",
+      "INFO:tensorflow:global_step/sec: 1447.51\n",
+      "INFO:tensorflow:loss = 7.14471944376e-10, step = 901\n",
+      "INFO:tensorflow:Saving checkpoints for 1000 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp9fj62rq0/model.ckpt.\n",
+      "INFO:tensorflow:Loss for final step: 7.5884361352e-11.\n",
+      "INFO:tensorflow:Starting evaluation at 2017-07-03-10:15:39\n",
+      "INFO:tensorflow:Finished evaluation at 2017-07-03-10:15:39\n",
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 9.16213e-11\n",
       "WARNING:tensorflow:Skipping summary for global_step, must be a float or np.float32.\n",
-      "INFO:tensorflow:Starting evaluation at 2017-07-03-00:10:04\n",
-      "INFO:tensorflow:Finished evaluation at 2017-07-03-00:10:05\n",
-      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 0.01009\n",
+      "INFO:tensorflow:Starting evaluation at 2017-07-03-10:15:40\n",
+      "INFO:tensorflow:Finished evaluation at 2017-07-03-10:15:40\n",
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 0.0100912\n",
       "WARNING:tensorflow:Skipping summary for global_step, must be a float or np.float32.\n",
-      "train loss: {'loss': 2.9530328e-13, 'global_step': 1000}\n",
-      "eval loss: {'loss': 0.010090049, 'global_step': 1000}\n"
+      "train loss: {'loss': 9.162128e-11, 'global_step': 1000}\n",
+      "eval loss: {'loss': 0.010091179, 'global_step': 1000}\n"
      ]
     }
    ],
@@ -754,7 +761,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
