use tf.reset_default_graph()

--- a/lesson_seven.ipynb
+++ b/lesson_seven.ipynb
@@ -12,22 +12,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# Let's import from lesson_six\n",
-    "import lesson_six as lesson_six\n",
-    "# Rest the graph\n",
-    "lesson_six.reset_graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
@@ -39,6 +23,9 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "from sklearn.datasets import fetch_california_housing\n",
+    "\n",
+    "# Reset the graph\n",
+    "tf.reset_default_graph()\n",
     "\n",
     "# Instanciat the data\n",
     "housing = fetch_california_housing()\n",
@@ -72,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -80,7 +67,8 @@
    },
    "outputs": [],
    "source": [
-    "lesson_six.reset_graph()\n",
+    "# Reset the graph\n",
+    "tf.reset_default_graph()\n",
     "\n",
     "n_epochs = 1000\n",
     "learning_rate = 0.01\n",
@@ -106,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -131,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -142,25 +130,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:  0 MSE=  14.5535\n",
-      "Epoch:  100 MSE=  0.837282\n",
-      "Epoch:  200 MSE=  0.561952\n",
-      "Epoch:  300 MSE=  0.546907\n",
-      "Epoch:  400 MSE=  0.540841\n",
-      "Epoch:  500 MSE=  0.536597\n",
-      "Epoch:  600 MSE=  0.533485\n",
-      "Epoch:  700 MSE=  0.531191\n",
-      "Epoch:  800 MSE=  0.529492\n",
-      "Epoch:  900 MSE=  0.528231\n",
-      "Best theta:  [[ 2.06855226]\n",
-      " [ 0.84201318]\n",
-      " [ 0.13798265]\n",
-      " [-0.25731888]\n",
-      " [ 0.28500068]\n",
-      " [ 0.00233129]\n",
-      " [-0.04121713]\n",
-      " [-0.7480495 ]\n",
-      " [-0.71861744]]\n"
+      "Epoch:  0 MSE=  10.7065\n",
+      "Epoch:  100 MSE=  0.829693\n",
+      "Epoch:  200 MSE=  0.604415\n",
+      "Epoch:  300 MSE=  0.581689\n",
+      "Epoch:  400 MSE=  0.569425\n",
+      "Epoch:  500 MSE=  0.560172\n",
+      "Epoch:  600 MSE=  0.552959\n",
+      "Epoch:  700 MSE=  0.547293\n",
+      "Epoch:  800 MSE=  0.54282\n",
+      "Epoch:  900 MSE=  0.539272\n",
+      "Best theta:  [[ 2.06855249]\n",
+      " [ 0.9154371 ]\n",
+      " [ 0.15288657]\n",
+      " [-0.3939141 ]\n",
+      " [ 0.39701718]\n",
+      " [ 0.00679992]\n",
+      " [-0.0440434 ]\n",
+      " [-0.57045412]\n",
+      " [-0.54946482]]\n"
      ]
     }
    ],
@@ -185,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -193,7 +181,8 @@
    },
    "outputs": [],
    "source": [
-    "lesson_six.reset_graph()\n",
+    "# Reset the graph\n",
+    "tf.reset_default_graph()\n",
     "\n",
     "n_epochs = 1000\n",
     "learning_rate = 0.01\n",
@@ -229,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -245,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -256,25 +245,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:  0 MSE=  12.2318\n",
-      "Epoch:  100 MSE=  0.798976\n",
-      "Epoch:  200 MSE=  0.66714\n",
-      "Epoch:  300 MSE=  0.599869\n",
-      "Epoch:  400 MSE=  0.564523\n",
-      "Epoch:  500 MSE=  0.545875\n",
-      "Epoch:  600 MSE=  0.535987\n",
-      "Epoch:  700 MSE=  0.530709\n",
-      "Epoch:  800 MSE=  0.527867\n",
-      "Epoch:  900 MSE=  0.526322\n",
-      "Best theta:  [[  2.06855559e+00]\n",
-      " [  8.37727904e-01]\n",
-      " [  1.30713731e-01]\n",
-      " [ -2.61316836e-01]\n",
-      " [  2.93626070e-01]\n",
-      " [ -2.56629748e-04]\n",
-      " [ -4.05110605e-02]\n",
-      " [ -8.05071473e-01]\n",
-      " [ -7.75725722e-01]]\n"
+      "Epoch:  0 MSE=  2.75443\n",
+      "Epoch:  100 MSE=  0.572695\n",
+      "Epoch:  200 MSE=  0.5491\n",
+      "Epoch:  300 MSE=  0.537362\n",
+      "Epoch:  400 MSE=  0.531216\n",
+      "Epoch:  500 MSE=  0.527988\n",
+      "Epoch:  600 MSE=  0.526285\n",
+      "Epoch:  700 MSE=  0.525383\n",
+      "Epoch:  800 MSE=  0.524902\n",
+      "Epoch:  900 MSE=  0.524643\n",
+      "Best theta:  [[ 2.06855559]\n",
+      " [ 0.81446099]\n",
+      " [ 0.12033767]\n",
+      " [-0.22860533]\n",
+      " [ 0.27152297]\n",
+      " [-0.00372927]\n",
+      " [-0.03913723]\n",
+      " [-0.90255833]\n",
+      " [-0.87104881]]\n"
      ]
     }
    ],
@@ -305,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -313,7 +302,8 @@
    },
    "outputs": [],
    "source": [
-    "lesson_six.reset_graph()"
+    "# Reset the graph\n",
+    "tf.reset_default_graph()"
    ]
   },
   {
@@ -330,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -355,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -376,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -398,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -406,7 +396,8 @@
    },
    "outputs": [],
    "source": [
-    "lesson_six.reset_graph()"
+    "# Rset the graph\n",
+    "tf.reset_default_graph()"
    ]
   },
   {
@@ -431,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -445,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -477,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -492,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -520,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -571,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -592,7 +583,7 @@
        "       [-0.83012849]], dtype=float32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -640,7 +631,8 @@
     }
    ],
    "source": [
-    "lesson_six.reset_graph()\n",
+    "# Reset the graph\n",
+    "tf.reset_default_graph()\n",
     "\n",
     "n_epochs = 1000                                                     \n",
     "learning_rate = 0.01                                                                \n",
@@ -705,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -726,7 +718,7 @@
        "       [-0.83012849]], dtype=float32)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -765,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -786,7 +778,7 @@
        "       [-0.83012849]], dtype=float32)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
