--- a/lesson_eight.ipynb
+++ b/lesson_eight.ipynb
@@ -25,23 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# Let's import from lesson_six\n",
-    "import lesson_six as lesson_six\n",
-    "# Rest the graph\n",
-    "lesson_six.reset_graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -52,6 +36,9 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "from sklearn.datasets import fetch_california_housing\n",
+    "\n",
+    "# Rest the graph\n",
+    "tf.reset_default_graph()\n",
     "\n",
     "# Instanciat the data\n",
     "housing = fetch_california_housing()\n",
@@ -75,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -100,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -122,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -203,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -224,7 +211,7 @@
        "       [-0.83012849]], dtype=float32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -265,7 +252,8 @@
    },
    "outputs": [],
    "source": [
-    "lesson_six.reset_graph()\n",
+    "# Rest Graph\n",
+    "tf.reset_default_graph()\n",
     "\n",
     "# Create a global variable\n",
     "W = tf.Variable([.3], dtype=tf.float32)\n",
@@ -280,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -300,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -326,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -357,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -370,7 +358,7 @@
        "[array([-1.], dtype=float32), array([ 1.], dtype=float32)]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -418,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -435,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -450,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -490,20 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "lesson_six.reset_graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -514,9 +489,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp30esndu8\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmpzrbaa_1y\n",
       "INFO:tensorflow:Using default config.\n",
-      "INFO:tensorflow:Using config: {'_task_type': None, '_task_id': 0, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x11e5600b8>, '_master': '', '_num_ps_replicas': 0, '_environment': 'local', '_is_chief': True, '_evaluation_master': '', '_tf_config': gpu_options {\n",
+      "INFO:tensorflow:Using config: {'_task_type': None, '_task_id': 0, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x1195b2ac8>, '_master': '', '_num_ps_replicas': 0, '_environment': 'local', '_is_chief': True, '_evaluation_master': '', '_tf_config': gpu_options {\n",
       "  per_process_gpu_memory_fraction: 1\n",
       "}\n",
       ", '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_secs': 600, '_save_checkpoints_steps': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000}\n",
@@ -525,46 +500,46 @@
       "Instructions for updating:\n",
       "Please switch to tf.summary.scalar. Note that tf.summary.scalar uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, passing a tensor or list of tags to a scalar summary op is no longer supported.\n",
       "INFO:tensorflow:Create CheckpointSaverHook.\n",
-      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp30esndu8/model.ckpt.\n",
-      "INFO:tensorflow:loss = 4.75, step = 1\n",
-      "INFO:tensorflow:global_step/sec: 994.243\n",
-      "INFO:tensorflow:loss = 0.0856067, step = 101\n",
-      "INFO:tensorflow:global_step/sec: 1031.09\n",
-      "INFO:tensorflow:loss = 0.0149809, step = 201\n",
-      "INFO:tensorflow:global_step/sec: 901.933\n",
-      "INFO:tensorflow:loss = 0.00703437, step = 301\n",
-      "INFO:tensorflow:global_step/sec: 927.506\n",
-      "INFO:tensorflow:loss = 0.000263851, step = 401\n",
-      "INFO:tensorflow:global_step/sec: 985.525\n",
-      "INFO:tensorflow:loss = 0.000480802, step = 501\n",
-      "INFO:tensorflow:global_step/sec: 992.721\n",
-      "INFO:tensorflow:loss = 0.000191461, step = 601\n",
-      "INFO:tensorflow:global_step/sec: 1016.93\n",
-      "INFO:tensorflow:loss = 4.736e-05, step = 701\n",
-      "INFO:tensorflow:global_step/sec: 1147.94\n",
-      "INFO:tensorflow:loss = 9.7207e-06, step = 801\n",
-      "INFO:tensorflow:global_step/sec: 1323.09\n",
-      "INFO:tensorflow:loss = 2.74034e-06, step = 901\n",
-      "INFO:tensorflow:Saving checkpoints for 1000 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp30esndu8/model.ckpt.\n",
-      "INFO:tensorflow:Loss for final step: 6.51463e-07.\n",
+      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmpzrbaa_1y/model.ckpt.\n",
+      "INFO:tensorflow:loss = 2.75, step = 1\n",
+      "INFO:tensorflow:global_step/sec: 616.135\n",
+      "INFO:tensorflow:loss = 0.0719709, step = 101\n",
+      "INFO:tensorflow:global_step/sec: 540.327\n",
+      "INFO:tensorflow:loss = 0.0113674, step = 201\n",
+      "INFO:tensorflow:global_step/sec: 537.785\n",
+      "INFO:tensorflow:loss = 0.00271461, step = 301\n",
+      "INFO:tensorflow:global_step/sec: 399.438\n",
+      "INFO:tensorflow:loss = 0.000348661, step = 401\n",
+      "INFO:tensorflow:global_step/sec: 487.686\n",
+      "INFO:tensorflow:loss = 7.37698e-05, step = 501\n",
+      "INFO:tensorflow:global_step/sec: 845.452\n",
+      "INFO:tensorflow:loss = 1.87309e-05, step = 601\n",
+      "INFO:tensorflow:global_step/sec: 884.611\n",
+      "INFO:tensorflow:loss = 3.46141e-07, step = 701\n",
+      "INFO:tensorflow:global_step/sec: 1007.6\n",
+      "INFO:tensorflow:loss = 3.00197e-07, step = 801\n",
+      "INFO:tensorflow:global_step/sec: 1190.35\n",
+      "INFO:tensorflow:loss = 7.50182e-08, step = 901\n",
+      "INFO:tensorflow:Saving checkpoints for 1000 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmpzrbaa_1y/model.ckpt.\n",
+      "INFO:tensorflow:Loss for final step: 8.13787e-09.\n",
       "WARNING:tensorflow:Rank of input Tensor (1) should be the same as output_rank (2) for column. Will attempt to expand dims. It is highly recommended that you resize your input, as this behavior may change.\n",
       "WARNING:tensorflow:From /Users/hishmadabubakaralamudi/anaconda3/envs/dlnd/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/estimators/head.py:1362: scalar_summary (from tensorflow.python.ops.logging_ops) is deprecated and will be removed after 2016-11-30.\n",
       "Instructions for updating:\n",
       "Please switch to tf.summary.scalar. Note that tf.summary.scalar uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, passing a tensor or list of tags to a scalar summary op is no longer supported.\n",
-      "INFO:tensorflow:Starting evaluation at 2017-07-03-10:15:33\n",
-      "INFO:tensorflow:Finished evaluation at 2017-07-03-10:15:34\n",
-      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 1.02473e-06\n",
+      "INFO:tensorflow:Starting evaluation at 2017-07-08-05:20:35\n",
+      "INFO:tensorflow:Finished evaluation at 2017-07-08-05:20:36\n",
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 1.83918e-08\n",
       "WARNING:tensorflow:Skipping summary for global_step, must be a float or np.float32.\n",
       "WARNING:tensorflow:Rank of input Tensor (1) should be the same as output_rank (2) for column. Will attempt to expand dims. It is highly recommended that you resize your input, as this behavior may change.\n",
       "WARNING:tensorflow:From /Users/hishmadabubakaralamudi/anaconda3/envs/dlnd/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/estimators/head.py:1362: scalar_summary (from tensorflow.python.ops.logging_ops) is deprecated and will be removed after 2016-11-30.\n",
       "Instructions for updating:\n",
       "Please switch to tf.summary.scalar. Note that tf.summary.scalar uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, passing a tensor or list of tags to a scalar summary op is no longer supported.\n",
-      "INFO:tensorflow:Starting evaluation at 2017-07-03-10:15:34\n",
-      "INFO:tensorflow:Finished evaluation at 2017-07-03-10:15:35\n",
-      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 0.0026126\n",
+      "INFO:tensorflow:Starting evaluation at 2017-07-08-05:20:36\n",
+      "INFO:tensorflow:Finished evaluation at 2017-07-08-05:20:37\n",
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 0.00253463\n",
       "WARNING:tensorflow:Skipping summary for global_step, must be a float or np.float32.\n",
-      "train loss: {'loss': 1.0247342e-06, 'global_step': 1000}\n",
-      "eval loss: {'loss': 0.002612605, 'global_step': 1000}\n"
+      "train loss: {'loss': 1.8391791e-08, 'global_step': 1000}\n",
+      "eval loss: {'loss': 0.0025346319, 'global_step': 1000}\n"
      ]
     }
    ],
@@ -572,6 +547,10 @@
     "import tensorflow as tf\n",
     "# NumPy is often used to load, manipulate and preprocess data.\n",
     "import numpy as np\n",
+    "\n",
+    "# Reset graph\n",
+    "tf.reset_default_graph()\n",
+    "\n",
     "\n",
     "# Declare list of features. We only have one real-valued feature. There are many\n",
     "# other types of columns that are more complicated and useful.\n",
@@ -622,20 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "lesson_six.reset_graph()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -649,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -660,49 +626,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp9fj62rq0\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp9reet26t\n",
       "INFO:tensorflow:Using default config.\n",
-      "INFO:tensorflow:Using config: {'_task_type': None, '_task_id': 0, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x11eaf6ef0>, '_master': '', '_num_ps_replicas': 0, '_environment': 'local', '_is_chief': True, '_evaluation_master': '', '_tf_config': gpu_options {\n",
+      "INFO:tensorflow:Using config: {'_task_type': None, '_task_id': 0, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x11a8eceb8>, '_master': '', '_num_ps_replicas': 0, '_environment': 'local', '_is_chief': True, '_evaluation_master': '', '_tf_config': gpu_options {\n",
       "  per_process_gpu_memory_fraction: 1\n",
       "}\n",
       ", '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_secs': 600, '_save_checkpoints_steps': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000}\n",
       "INFO:tensorflow:Create CheckpointSaverHook.\n",
-      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp9fj62rq0/model.ckpt.\n",
-      "INFO:tensorflow:loss = 4.96768802885, step = 1\n",
-      "INFO:tensorflow:global_step/sec: 1208.77\n",
-      "INFO:tensorflow:loss = 0.521674350083, step = 101\n",
-      "INFO:tensorflow:global_step/sec: 1128.85\n",
-      "INFO:tensorflow:loss = 0.00365742811902, step = 201\n",
-      "INFO:tensorflow:global_step/sec: 447.433\n",
-      "INFO:tensorflow:loss = 0.00284671054575, step = 301\n",
-      "INFO:tensorflow:global_step/sec: 873.897\n",
-      "INFO:tensorflow:loss = 8.27930022415e-05, step = 401\n",
-      "INFO:tensorflow:global_step/sec: 923.463\n",
-      "INFO:tensorflow:loss = 2.59063832517e-05, step = 501\n",
-      "INFO:tensorflow:global_step/sec: 1019.22\n",
-      "INFO:tensorflow:loss = 6.1612805529e-07, step = 601\n",
-      "INFO:tensorflow:global_step/sec: 392.642\n",
-      "INFO:tensorflow:loss = 9.67499902835e-08, step = 701\n",
-      "INFO:tensorflow:global_step/sec: 1103.44\n",
-      "INFO:tensorflow:loss = 1.63358085485e-08, step = 801\n",
-      "INFO:tensorflow:global_step/sec: 1447.51\n",
-      "INFO:tensorflow:loss = 7.14471944376e-10, step = 901\n",
-      "INFO:tensorflow:Saving checkpoints for 1000 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp9fj62rq0/model.ckpt.\n",
-      "INFO:tensorflow:Loss for final step: 7.5884361352e-11.\n",
-      "INFO:tensorflow:Starting evaluation at 2017-07-03-10:15:39\n",
-      "INFO:tensorflow:Finished evaluation at 2017-07-03-10:15:39\n",
-      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 9.16213e-11\n",
+      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp9reet26t/model.ckpt.\n",
+      "INFO:tensorflow:loss = 14.17495635, step = 1\n",
+      "INFO:tensorflow:global_step/sec: 1221.6\n",
+      "INFO:tensorflow:loss = 0.000970924604088, step = 101\n",
+      "INFO:tensorflow:global_step/sec: 1216.74\n",
+      "INFO:tensorflow:loss = 0.000256270039342, step = 201\n",
+      "INFO:tensorflow:global_step/sec: 1174.14\n",
+      "INFO:tensorflow:loss = 7.63670358756e-05, step = 301\n",
+      "INFO:tensorflow:global_step/sec: 1190.23\n",
+      "INFO:tensorflow:loss = 4.58058076913e-06, step = 401\n",
+      "INFO:tensorflow:global_step/sec: 1197.72\n",
+      "INFO:tensorflow:loss = 2.45482080009e-07, step = 501\n",
+      "INFO:tensorflow:global_step/sec: 1210.92\n",
+      "INFO:tensorflow:loss = 4.87463779543e-08, step = 601\n",
+      "INFO:tensorflow:global_step/sec: 1214.94\n",
+      "INFO:tensorflow:loss = 4.83788700714e-09, step = 701\n",
+      "INFO:tensorflow:global_step/sec: 1355.16\n",
+      "INFO:tensorflow:loss = 2.0561196683e-10, step = 801\n",
+      "INFO:tensorflow:global_step/sec: 1568.16\n",
+      "INFO:tensorflow:loss = 2.11653828434e-11, step = 901\n",
+      "INFO:tensorflow:Saving checkpoints for 1000 into /var/folders/v8/qd7dlmk9103cms8fxm9t5_600000gn/T/tmp9reet26t/model.ckpt.\n",
+      "INFO:tensorflow:Loss for final step: 9.6282984919e-13.\n",
+      "INFO:tensorflow:Starting evaluation at 2017-07-08-05:20:43\n",
+      "INFO:tensorflow:Finished evaluation at 2017-07-08-05:20:43\n",
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 2.096e-12\n",
       "WARNING:tensorflow:Skipping summary for global_step, must be a float or np.float32.\n",
-      "INFO:tensorflow:Starting evaluation at 2017-07-03-10:15:40\n",
-      "INFO:tensorflow:Finished evaluation at 2017-07-03-10:15:40\n",
-      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 0.0100912\n",
+      "INFO:tensorflow:Starting evaluation at 2017-07-08-05:20:44\n",
+      "INFO:tensorflow:Finished evaluation at 2017-07-08-05:20:44\n",
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 0.0100898\n",
       "WARNING:tensorflow:Skipping summary for global_step, must be a float or np.float32.\n",
-      "train loss: {'loss': 9.162128e-11, 'global_step': 1000}\n",
-      "eval loss: {'loss': 0.010091179, 'global_step': 1000}\n"
+      "train loss: {'loss': 2.0959963e-12, 'global_step': 1000}\n",
+      "eval loss: {'loss': 0.010089761, 'global_step': 1000}\n"
      ]
     }
    ],
    "source": [
+    "# reset graph\n",
+    "tf.reset_default_graph()\n",
+    "\n",
+    "\n",
     "# Declare list of features, we only have one real-values feature\n",
     "def model(features, labels, mode):\n",
     "    \n",
